feat: implements [logger, train] 1) fix datamodule [base augmentation, do not use ToTensorV2()] 2) add base configs (train configs) 3) fix model calculate loss (to calculate valid loss -- mismatch image size - label size) 4) implement train code #4

--- a/smp/configs/model_configs/unet_efficientnet.yaml
+++ b/smp/configs/model_configs/unet_efficientnet.yaml
@@ -8,7 +8,7 @@ model:
   classes: 29
 
 loss:
-  use_different_loss: True # default BCE
+  use_different_loss: True
   name: JaccardLoss
   args:
     mode: multilabel
