--- a/smp/configs/train_configs/base.yaml
+++ b/smp/configs/train_configs/base.yaml
@@ -1,3 +1,8 @@
+path:
+  augmentation: /data/ephemeral/hbis/configs/augmentation_configs/base_augmentation.yaml
+  data: /data/ephemeral/hbis/configs/data_configs/xray_data.yaml
+  model: /data/ephemeral/hbis/configs/model_configs/unet_efficientnet.yaml
+
 optimizer:
   name: Adam
   lr_backbone: 1e-5
@@ -13,7 +18,27 @@ scheduler:
 
 trainer:
   max_epochs: 100
+  check_val_every_n_epoch: 5
   accelerator: gpu
   devices: 1
+
+callbacks:
+  earlystopping: True
+  earlystopping_params:
+    monitor: val_loss
+    patience: 5
+    mode: min
+  model_checkpoint: True
+  model_checkpoint_params:
+    monitor: val_loss
+    save_top_k: 3
+    mode: min
+
+logger:
+  use_tensorboard: True
+  use_wandb: False
+  project: test
+  name: arch_encoder_experiments # {arch}_{encoder}_{experiements}
+
 
 seed: 42  # 시드 값 추가
