--- a/smp/configs/train_configs/base.yaml
+++ b/smp/configs/train_configs/base.yaml
@@ -25,18 +25,18 @@ trainer:
 callbacks:
   earlystopping: True
   earlystopping_params:
-    monitor: val_loss
+    monitor: avg_dice_score
     patience: 5
-    mode: min
+    mode: max
   model_checkpoint: True
   model_checkpoint_params:
-    monitor: val_loss
-    save_top_k: 3
-    mode: min
+    monitor: avg_dice_score
+    save_top_k: 2
+    mode: max
 
 logger:
   use_tensorboard: True
-  use_wandb: False
+  use_wandb: True
   project: test
   name: unet_efficientnet-b0_experiments # {arch}_{encoder}_{experiements}
 
