--- a/smp/configs/train_configs/cosine.yaml
+++ b/smp/configs/train_configs/cosine.yaml
@@ -11,10 +11,11 @@ optimizer:
     weight_decay: 1e-6
 
 scheduler:
-  name: StepLR
+  name: CosineAnnealingWarmRestarts
   params:
-    step_size: 10
-    gamma: 0.7
+    T_0: 10          
+    T_mult: 1        
+    eta_min: 0.000001
 
 trainer:
   max_epochs: 100
@@ -38,7 +39,7 @@ logger:
   use_tensorboard: True
   use_wandb: True
   project: test
-  name: unet_efficientnet-b0_experiments # {arch}_{encoder}_{experiements}
+  name: upernet_efficientnet-b7_flip # {arch}_{encoder}_{experiements}
 
 
 seed: 42  # 시드 값 추가
