refactor: Split config and modify code accordingly #68

--- a/smp/configs/aug_cfg/base.yaml
+++ b/smp/configs/aug_cfg/base.yaml
@@ -1,6 +1,6 @@
 # configs/augmentation_configs/base_augmentation.yaml
 augmentation:
-  use_augmentation: true
+  enabled: true
   transforms:
     - name: Resize
       params:
