--- a/smp/configs/experiments_cfg/amp.yaml
+++ b/smp/configs/experiments_cfg/amp.yaml
@@ -1,4 +1,5 @@
-# configs/util_cfg/base.yaml
+# configs/experiments_cfg/amp.yaml
+# notes: you can use this config file for auto mixed precision (bf-16) on training model
 
 # interpolation method
 # read F.interpolate method args (document)
@@ -22,4 +23,4 @@ crf:
 
 # auto mixed preicision bf-16
 amp:
-  enabled: False # default: false
+  enabled: True # default: false
