fix gemotric augmentation add adjust threshold notebook file

--- a/smp/configs/aug_cfg/geometric/base.yaml
+++ b/smp/configs/aug_cfg/geometric/base.yaml
@@ -1,7 +1,7 @@
 # configs/aug_cfg/geometric/base.yaml
 
 augmentation:
-  enabled: true
+  enabled: True
   transforms:
     - name: Resize
       params:
