--- a/smp/configs/meta_experiments/base.yaml
+++ b/smp/configs/meta_experiments/base.yaml
@@ -1,4 +1,4 @@
-# configs/total.yaml
+# configs/total_cfg/total.yaml
 
 # you have to input this config file for train, validation, inference
 # ex) python tools/train.py --config={this_file_name}
@@ -6,11 +6,11 @@
 # ex) python tools/inference.py --config={this_file_name} --weights={checkpoint_path}
 
 path:
-  augmentation: /data/ephemeral/level2-cv-semanticsegmentation-cv-06-lv3/smp/configs/aug_cfg/total_aug_1024.yaml
-  data: /data/ephemeral/level2-cv-semanticsegmentation-cv-06-lv3/smp/configs/data_cfg/1024x1024.yaml
+  augmentation: /data/ephemeral/level2-cv-semanticsegmentation-cv-06-lv3/smp/configs/aug_cfg/total_aug_512.yaml
+  data: /data/ephemeral/level2-cv-semanticsegmentation-cv-06-lv3/smp/configs/data_cfg/512x512.yaml
   experiments: /data/ephemeral/level2-cv-semanticsegmentation-cv-06-lv3/smp/configs/experiments_cfg/amp.yaml
   loss: /data/ephemeral/level2-cv-semanticsegmentation-cv-06-lv3/smp/configs/loss_cfg/single/dice.yaml
-  model: /data/ephemeral/level2-cv-semanticsegmentation-cv-06-lv3/smp/configs/model_cfg/unetplusplus/unetplusplus_efficientnetv2-m.yaml
+  model: /data/ephemeral/level2-cv-semanticsegmentation-cv-06-lv3/smp/configs/model_cfg/unetplusplus/unetplusplus_hrnet-w40.yaml
   train: /data/ephemeral/level2-cv-semanticsegmentation-cv-06-lv3/smp/configs/train_cfg/base.yaml
 
 # output file name (inference[validation, test] csv filename)
