feat: Supports multi-task learning using metadata #68

--- a/smp/configs/aug_cfg/total_aug_512.yaml
+++ b/smp/configs/aug_cfg/total_aug_512.yaml
@@ -35,7 +35,7 @@ augmentation:
       params:
         limit: 10
         p: 0.3
-    - name: HorizontalFlip
-      params:
-        p: 0.3
+    # - name: HorizontalFlip
+    #   params:
+    #     p: 0.3
     
