--- a/smp/configs/experiments_cfg/bicubic.yaml
+++ b/smp/configs/experiments_cfg/bicubic.yaml
@@ -28,3 +28,15 @@ crf:
 # auto mixed preicision bf-16
 amp:
   enabled: False # default: false
+
+# using metadata for multi-task learning
+metadata:
+  gender:
+    enabled: False
+    weights: 0.2
+    notes: "aux classifier로 성별 이진 분류 task를 추가 (multi-task learning)"
+  leftright:
+    enabled: False
+    weights: 0.2
+    notes: "aux classifier로 왼손 및 오른손 이진 분류 task를 추가 (multi-task learning)"
+    descriptions: "사용 시 flip을 증강을 사용하지 않아야 옳은 실험이 됨"
