--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-__pycache__
+__pycache__/
 *.json
 *.png
 *.gz
@@ -9,3 +9,5 @@ __pycache__
 *.csv
 *.txt
 */custom_checkpoint/*
+logs/
+segmentation_models_pytorch
