--- a/smp/configs/data_cfg/1024x1024.yaml
+++ b/smp/configs/data_cfg/1024x1024.yaml
@@ -7,6 +7,7 @@ data:
   train_data_path: /data/ephemeral/data/train/DCM
   train_label_path: /data/ephemeral/data/train/outputs_json
   test_data_path: /data/ephemeral/data/test/DCM
+  # meta_data_path: /data/ephemeral/data/metadata.json # If you don’t use metadata, remove this line. (feat. experiments configs file)
   pin_memory: true
   train:
     batch_size: 2
